--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Countries API</title>
+  <script src="https://kit.fontawesome.com/548a8329bf.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="app"></div>
